@@ -89,9 +89,11 @@ CREATE TABLE tx_bzdstaffdirectory_persons (
 	email tinytext NOT NULL,
 	tasks text NOT NULL,
 	opinion text NOT NULL,
+	nickname tinytext NOT NULL,
 	location tinytext NOT NULL,
 	room tinytext NOT NULL,
 	phone tinytext NOT NULL,
+	mobile_phone tinytext NOT NULL,
 	officehours tinytext NOT NULL,
 	xing_profile_url tinytext NOT NULL,
 	files blob NOT NULL,
