@@ -94,6 +94,12 @@
 					<td>###PHONE###</td>
 				</tr>
 			<!--###FIELD_WRAPPER_PHONE### -->
+			<!--###FIELD_WRAPPER_MOBILE_PHONE### -->
+				<tr>
+					<td>###LABEL_MOBILE_PHONE###</td>
+					<td>###MOBILE_PHONE###</td>
+				</tr>
+			<!--###FIELD_WRAPPER_MOBILE_PHONE### -->
 			<!--###FIELD_WRAPPER_XING### -->
 				<tr>
 					<td>###LABEL_XING###</td>
@@ -118,6 +124,12 @@
 					<td>###LOCATION###</td>
 				</tr>
 			<!--###FIELD_WRAPPER_LOCATION### -->
+			<!--###FIELD_WRAPPER_NICKNAME### -->
+				<tr>
+					<td>###LABEL_NICKNAME###</td>
+					<td>###NICKNAME###</td>
+				</tr>
+			<!--###FIELD_WRAPPER_NICKNAME### -->
 			<!--###FIELD_WRAPPER_TASKS### -->
 				<tr>
 					<td>###LABEL_TASKS###</td>
