@@ -11,9 +11,11 @@
 		<languageKey index="default" type="array">
 			<label index="label_email">E-mail:</label>
 			<label index="label_phone">Phone:</label>
+			<label index="label_mobile_phone">Mobile Phone:</label>
 			<label index="label_xing">XING:</label>
 			<label index="label_room">Room:</label>
 			<label index="label_function">Function:</label>
+			<label index="label_nickname">Nickname:</label>
 			<label index="label_date_incompany">In company since:</label>
 			<label index="label_date_birthdate">Birthdate:</label>
 			<label index="label_date_age">Age:</label>
@@ -46,8 +48,11 @@
 		<languageKey index="de" type="array">
 			<label index="label_email">E-Mail:</label>
 			<label index="label_phone">Telefon:</label>
+			<label index="label_mobile_phone">Mobiltelefon:</label>
+			<label index="label_xing">XING:</label>
 			<label index="label_room">Raum:</label>
 			<label index="label_function">Funktion:</label>
+			<label index="label_nickname">Spitzname:</label>
 			<label index="label_date_incompany">In der Firma seit:</label>
 			<label index="label_date_birthdate">Geburtsdatum:</label>
 			<label index="label_date_age">Alter:</label>
@@ -150,6 +155,9 @@
 			<label index="label_link_close" type="integer">118945459</label>
 			<label index="label_location_singular" type="integer">199837335</label>
 			<label index="label_location_plural" type="integer">30041596</label>
+			<label index="label_mobile_phone" type="integer">254374111</label>
+			<label index="label_xing" type="integer">37974788</label>
+			<label index="label_nickname" type="integer">213574789</label>
 		</languageKey>
 		<languageKey index="fr" type="array">
 			<label index="label_email" type="integer">233919839</label>
@@ -223,6 +231,9 @@
 			<label index="label_link_close">close</label>
 			<label index="label_location_singular">Location:</label>
 			<label index="label_location_plural">Locations:</label>
+			<label index="label_mobile_phone">Mobile Phone:</label>
+			<label index="label_xing">XING:</label>
+			<label index="label_nickname">Nickname:</label>
 		</languageKey>
 		<languageKey index="fr" type="array">
 			<label index="label_email">E-mail:</label>
